fix(code-block): custom MDX code block without layout shift

--- a/uli-website/src/styles/global.css
+++ b/uli-website/src/styles/global.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+pre {
+    overflow-x: auto;
+    white-space: pre;
+    word-break: normal;
+  }
